--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="us">
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Omar">
@@ -37,9 +37,8 @@
     
     <main>
         <section id="contactus">
-        
         <h2>Our Contact Form</h2>
-        <form action="https://httpbin.org/get" method="get">
+        <form action="http://127.0.0.1:5000/" method="post">
             <fieldset><Legend>Send Us A Message</Legend>
             <p><label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Omar" required></p>
