--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <main>
         <section id="contactus">
         <h2>Our Contact Form</h2>
-        <form action="http://192.168.1.8:5000/" method="post">
+        <form action="https://vercel.com/hidanoncord/data-recieve" method="post">
             <fieldset><Legend>Send Us A Message</Legend>
             <p><label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Omar" required></p>
