--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <main>
         <section id="contactus">
         <h2>Our Contact Form</h2>
-        <form action="https://data-recieve-2xvly8goq-hidanoncord.vercel.app" method="post">
+        <form action="https://data-recieve.vercel.app/" method="post">
             <fieldset><Legend>Send Us A Message</Legend>
             <p><label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Omar" required></p>
