added third web support

--- a/hours.html
+++ b/hours.html
@@ -11,7 +11,7 @@
     <body>
         <header>
         <section>
-            <h1>Little Taco Shop Hours</h1>
+            <h1 align="center">Little Taco Shop Hours</h1>
             <nav>
             <ul>
                 <li>
