--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-        <h1>Welcome to The Little Taco Shop</h1>
+        <h1 align="center">Welcome to The Little Taco Shop</h1>
         <nav>
         <ul>
             <li>
@@ -27,7 +27,7 @@
             </li>
         </ul>
             <figure>
-            <img src="img/tacos_and_drink_400x267.png" alt="Tacos And Drinks" title="Tacos and a Drink" width="400" height="267">
+            <img src="img/tacos_and_drink_400x267.png" alt="Tacos And Drinks" title="Tacos and a Drink" width="400" height="267" loading="lazy">
             <figcaption>
             <p>Tacos and a Drink</p>
             </figcaption>
