--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <body>
         <header>
         <section>
-        <h1>Contact Us</h1>
+        <h1 align="center">Contact Us</h1>
         <nav>
             <ul>
                 <li>
@@ -28,7 +28,7 @@
                 </li>
             </ul>
             <figure>
-                <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos up close">
+                <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos up close" width="400" height="260" loading="lazy">
                 <figcaption>Little Taco Shop Tacos</figcaption>
             </figure>
         </nav>
@@ -38,7 +38,7 @@
     <main>
         <section id="contactus">
         <h2>Our Contact Form</h2>
-        <form action="https://data-recieve-fqu2a58oz-hidanoncord.vercel.app" method="post" target="_top">
+        <form action="https://data-recieve.vercel.app/" method="post" target="_top">
             <fieldset><Legend>Send Us A Message</Legend>
             <p><label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Omar" required></p>
