--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <main>
         <section id="contactus">
         <h2>Our Contact Form</h2>
-        <form action="https://vercel.com/hidanoncord/actual-display" method="post" target="_top">
+        <form action="https://actual-display.vercel.app/" method="post" target="_top">
             <fieldset><Legend>Send Us A Message</Legend>
             <p><label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Omar" required></p>
